--- a/public/index.html
+++ b/public/index.html
@@ -26,25 +26,26 @@
   <div id="searchResult"></div>
 
   <script>
-    async function shortenURL() {
-      const url = document.getElementById('longUrl').value.trim();
-      const response = await fetch('/shorten', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ longUrl: url })
-      });
-      const data = await response.json();
-      const resultDiv = document.getElementById('result');
-      resultDiv.innerHTML = data.shortUrl ? `Short URL: <a href="${data.shortUrl}" target="_blank">${data.shortUrl}</a>` : data.error;
-    }
+  async function shortenURL() {
+    const url = document.getElementById('longUrl').value.trim();
+    const response = await fetch(window.location.origin + '/shorten', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ longUrl: url })
+    });
+    const data = await response.json();
+    const resultDiv = document.getElementById('result');
+    resultDiv.innerHTML = data.shortUrl ? `Short URL: <a href="${data.shortUrl}" target="_blank">${data.shortUrl}</a>` : data.error;
+  }
 
-    async function searchShortURL() {
-      const longUrl = document.getElementById('searchInput').value.trim();
-      const response = await fetch(`/search?longUrl=${encodeURIComponent(longUrl)}`);
-      const resultDiv = document.getElementById('searchResult');
-      const data = await response.json();
-      resultDiv.innerHTML = data.shortUrl ? `Short URL: <a href="${data.shortUrl}" target="_blank">${data.shortUrl}</a>` : data.error;
-    }
-  </script>
+  async function searchShortURL() {
+    const longUrl = document.getElementById('searchInput').value.trim();
+    const response = await fetch(window.location.origin + `/search?longUrl=${encodeURIComponent(longUrl)}`);
+    const resultDiv = document.getElementById('searchResult');
+    const data = await response.json();
+    resultDiv.innerHTML = data.shortUrl ? `Short URL: <a href="${data.shortUrl}" target="_blank">${data.shortUrl}</a>` : data.error;
+  }
+</script>
+
 </body>
 </html>
